Fix overflow

--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -10,7 +10,7 @@
   &__mainBox {
     border: solid #494e5f 10px;
     background-color: #96a4d4;
-    padding: 20px;
+    padding: 15px;
     &__title {
       font-family: "Cinzel Decorative", cursive;
       font-size: 27px;
