--- a/src/stylesheets/Quotes.scss
+++ b/src/stylesheets/Quotes.scss
@@ -61,7 +61,7 @@
 
 .new-quote-btn {
   height: 50px;
-  width: 200px;
+  width: 180px;
   &__btn-text {
     font-family: "Cinzel Decorative", cursive;
     font-size: 15px;
